# scr031019

./: Setup-Anaconda.ipynb  Setup-Pip.ipynb  advanced-data-types-lab-solution.ipynb  advanced-data-types-lab.ipynb  advanced-data-types.ipynb  advanced-generators-lab-solution.ipynb  advanced-generators-lab.ipynb  advanced-generators.ipynb  advanced-oop-lab-solution.ipynb  advanced-oop-lab.ipynb  advanced-oop.ipynb  advanced-python.ipynb  asyncio-lab-solution.ipynb  asyncio-lab.ipynb  asyncio.ipynb  celery-lab-solution.ipynb  celery-lab.ipynb  celery.ipynb  closures-lab.ipynb  closures.ipynb  core-syntax-lab-solution.ipynb  core-syntax-lab.ipynb  core-syntax.ipynb  dbapi-lab-solution.ipynb  dbapi-lab.ipynb  dbapi.ipynb  dispy-lab-solution.ipynb  dispy-lab.ipynb  dispy.ipynb  email-lab.ipynb  email.ipynb  flask-api-lab.ipynb  flask-api.ipynb  flask-pymongo-lab-solution.ipynb  flask-pymongo-lab.ipynb  flask-pymongo.ipynb  flask-sqlalchemy-lab-solution.ipynb  flask-sqlalchemy-lab.ipynb  flask-sqlalchemy.ipynb  flask-ui-lab.ipynb  (+32 more)
data/: dirty_prices.csv  real-estate.db
data/MyProject/: README.md  setup.cfg
data/MyProject/MyProject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
data/MyProject/ProductionalizingProject_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/MyProject/ProductionalizingProject_2.egg-info/: PKG-INFO  SOURCES.txt
data/MyProject/mypackage/: template.txt
data/asyncio-examples/: asyncio-new.py  asyncio-old.py
data/celery_examples/: file_tasks.py  tasks.py
data/flask-examples/: app2.py  app4.py  app5.py  app6.py  app7.py  app7_posts.py  (+12 more)
(+25 files in other folders)
