[metadata]
;; change name to make it unique
name = ProductionalizingProject-1
url = https://github.com/DevelopIntelligence
author = Some Person
author_email = somebody@example.com
version = 0.3
description = This should be a short description of our project
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = test, class

[options]
packages = mypackage
install_requires = 
    jupyter
    flask
    numpy>=1.16.0<1.17
    
[options.package_data]
* = *.txt
